feat(api): handle exceptions
- Add error schema in openAPI specs.
